# crustyswarm

./: .gitignore  Cargo.toml  README.md  evomontage.sh  rebound.oide.json  zero_tree.oide.json
core/: Cargo.toml  genome.oide.json  result.genome.json  second.genome.json
core/src/: bin.rs  io.rs  lib.rs  swarm.rs  utils.rs  world.rs
core/src/swarm/: actor.rs  agent.rs  distribution.rs  dummies.rs  genome.rs  grammar.rs  mod.rs  oide.rs  oide_genome.rs  ruleset.rs  species.rs  world.rs
core/src/swarm/evo/: conversion.rs  genome.rs  mod.rs
core/src/swarm/genome/: dummies.rs  energy.rs  replacement.rs
derive_diff/: Cargo.toml
derive_diff/src/: lib.rs  main.rs
evoviz/: Cargo.toml
evoviz/joystix/: JoystixMonospace-Regular-10.fnt  JoystixMonospace-Regular-32.fnt  JoystixMonospace-Regular-64.fnt
evoviz/src/: main.rs
evoviz/src/shaders/: terrain.glsl.vs
experiments/: .gitignore  _base_single.json  base-sparsetree.json  base_combined.json  base_terrain.json  base_tree.json  base_tree2.json  base_water.json  enh_water.json  experiments.json  images.sh  make.sh  make_from_scratch.sh  mixed_terrain.json  numake.sh  pyxperiments.json  pyxperiments.py  runall.sh  test.sh  videos.sh  viz.sh
experiments/evo_analysis/adv_op_ana/: gen19_b05_+T.oide.json  gen19_b25_+T.oide.json  gen19_base05_+Target_mark.grammar.json  gen19_base25_+Target_mark.grammar.json
experiments/evo_analysis/basic_op_ana/: basic1.oide.json  basic1.raw.json
experiments/evo_analysis/basic_op_ana/configs/: basic1_basic2_add_0.1.oide.json  basic1_basic2_add_0.2.oide.json  basic1_basic2_add_0.3.oide.json  basic1_basic2_add_0.4.oide.json  basic1_basic2_add_0.5.oide.json  basic1_basic2_add_0.6.oide.json  basic1_basic2_add_0.7.oide.json  basic1_basic2_add_0.8.oide.json  basic1_basic2_add_0.9.oide.json  basic1_basic2_add_1.0.oide.json  basic1_basic2_lerp_0.1.oide.json  basic1_basic2_lerp_0.2.oide.json  basic1_basic2_lerp_0.3.oide.json  basic1_basic2_lerp_0.4.oide.json  basic1_basic2_lerp_0.5.oide.json  basic1_basic2_lerp_0.6.oide.json  basic1_basic2_lerp_0.7.oide.json  basic1_basic2_lerp_0.8.oide.json  basic1_basic2_lerp_0.9.oide.json  basic1_basic2_lerp_1.0.oide.json  basic1_opposite_0.0.oide.json  basic1_opposite_0.1.oide.json  basic1_opposite_0.2.oide.json  basic1_opposite_0.3.oide.json  basic1_opposite_0.4.oide.json  basic1_opposite_0.5.oide.json  basic1_opposite_0.6.oide.json  basic1_opposite_0.7.oide.json  basic1_opposite_0.8.oide.json  basic1_opposite_0.9.oide.json  basic1_opposite_1.0.oide.json  (+17 more)
experiments/evo_analysis/clamped_basic_op_ana/: basic2.oide.json  basic2.raw.json
experiments/globalfoo/: farm1.json  seed_complete2  terrain1.json  terrain2.json  terrain3.json  terrain4.json  terrain5.json  terrain5_1.json  terrain6.json  tree1.json  tree4.json  tree8.json  water4.json
experiments/model_analysis/: base-hightree.json  base_jetpack.json  base_nftree.json  base_terrain.json  base_tter.json  slanted_tree.json  viz.sh
experiments/model_analysis/globalfoo/: combined_minimals.json  complete2.json  complete4.json  farm2.json  farm3.json  farm4.json  terrain4.json  terrain4_1.json  terrain6.json  tree2.json  tree5.json  tree6.json  tree7.json  water1.json  water2.json  water3.json  water4.json
experiments/newsletter/: mixed_terrain.json
r_oide/: Cargo.toml
r_oide/src/: atoms.rs  lib.rs
r_oide/src/atoms/: bool.rs  bool_cell.rs  bounded_float.rs  bounded_float_vec.rs  bounded_int.rs  bounded_int_vec.rs  fixed.rs  multiset.rs  tuples.rs  vec.rs
rayviz/: Cargo.toml
rayviz/monofonto/: Monofonto-Regular-10.fnt  Monofonto-Regular-32.fnt  Monofonto-Regular-64.fnt  monofonto.ttf.fnt
rayviz/src/: main.rs
rayviz/src/shaders/: terrain.glsl.fs  terrain.glsl.vs
samples/: combined_config.json  context_config.json  dense_combined_config.json  maybeposterseed  posterseed  single_config.json  terrain_config.json  terrain_test_config.json  tree_config.json  water_config.json
swarmcli/: Cargo.toml
swarmcli/src/: main.rs
(+43 files in other folders)
