[package]
name = "crustswarm"
version = "0.1.0"
authors = ["Yasin Raies <yasin.raies@gmail.de>"]

[lib]
name = "crustswarm_lib"
path = "src/lib.rs"

[[bin]]
name = "testapp"
path = "src/bin.rs"


[dependencies]
rand = "0.6"
cgmath = { version = "0.17", features = ["serde"] }
rayon = "1.0"
toml = "0.4.10"
serde = { version = "1.0.88", features = ["derive"] }
