[package]
name = "crustswarm"
version = "0.2.0"
authors = ["Yasin Raies <yasin.raies@gmail.de>"]
edition = "2018"

[lib]
name = "crustswarm_lib"
path = "src/lib.rs"

[[bin]]
name = "swarmcli"
path = "src/bin.rs"


[dependencies]
rand = "^0.6"
cgmath = { version = "^0.17", features = ["serde"] }
rayon = "^1.3"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1"
fnv = "^1.0"
itertools = "^0.10"

[dependencies.derive_diff]
path = "../derive_diff"

[dependencies.r_oide]
path = "../r_oide"
